<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:layout_gravity="center">

    <Button
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1" />

    <Button
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2" />

    <Button
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3" />

    <Button
        android:id="@+id/key_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_C" />

    <Button
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4" />

    <Button
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6" />

    <Button
        android:id="@+id/key_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_sum" />

    <Button
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9" />

    <Button
        android:id="@+id/key_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_sub" />

    <Button
        android:id="@+id/key_plus_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_plus_minus" />

    <Button
        android:id="@+id/key_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_0" />

    <Button
        android:id="@+id/key_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_dot" />

    <Button
        android:id="@+id/key_mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_mul" />

    <Button
        android:id="@+id/key_perc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_perc" />

    <Button
        android:id="@+id/key_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_res"
        android:layout_columnSpan="2"
        android:layout_gravity="fill" />

    <Button
        android:id="@+id/key_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_div" />

</GridLayout>

<!-- Выбрал GridLayout, так как он мне кажется самым простым в реализации клавиатуры калькулятора.
А лень - двигатель прогресса) -->